--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+serial-tool (1.2.0) stable; urgency=medium
+
+  * python3 port
+
+ -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Wed, 27 Jul 2022 14:17:58 +0300
+
 serial-tool (1.1.0) stable; urgency=medium
 
   * support for batch mode (useful in scripts)
