--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+serial-tool (1.2.3) stable; urgency=medium
+
+  * Enable angry pylint. No functional changes
+
+ -- Ekaterina Volkova <ekaterina.volkova@wirenboard.com>  Mon, 26 May 2025 15:49:52 +0300
+
 serial-tool (1.2.2) stable; urgency=medium
 
   * Fix lintian
